syntax = "proto3";

// A package can include multiple services
package todoPackage;

service Todo{
    rpc createTodo(TodoText) returns (TodoItem);
    rpc readTodos(noParams) returns (TodoItems); // In proto, we cannot have functions with no paramters
    rpc readTodosStream(noParams) returns (stream TodoItem); // This method will stream the TodoItem data back to client
}

message noParams {} // This is workaround for functions with no paramters

message TodoText{
    string text = 1;
}

message TodoItem{
    int32 id = 1;
    string text =2;
}

message TodoItems{
    repeated TodoItem todoItems = 1;
}